<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".preparation_room.PreparationRoom">

    <TextView
            android:id="@+id/txt_playerTwoNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txt_VS"
            app:layout_constraintTop_toTopOf="@+id/txt_VS"
            android:layout_marginStart="15dp"
            android:text="@string/txt_playerOne"/>
    <TextView
            android:id="@+id/txt_VS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/txt_vs"/>
    <TextView
            android:id="@+id/txt_playerOneNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/txt_VS"
            app:layout_constraintTop_toTopOf="@+id/txt_VS"
            android:layout_marginEnd="15dp"
            android:text="@string/txt_playerTwo"/>

    <com.keepcoding.android_planes_on_paper.utilities.planes_border.border_grid.BorderGridView
            android:id="@+id/grid_planesBorder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:numColumns="10"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_VS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_playerIsReady"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

    </com.keepcoding.android_planes_on_paper.utilities.planes_border.border_grid.BorderGridView>

    <Button
            android:id="@+id/btn_playerIsReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/btn_playerIsReady"/>
    <Button
            android:id="@+id/btn_playerLeftGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_playerIsReady"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:text="@string/btn_playerLeftRoom"/>

</androidx.constraintlayout.widget.ConstraintLayout>