<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrivateRoomMenu">

    <EditText
            android:id="@+id/et_privateNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_nickname"
            android:inputType="textPersonName"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_accessToken"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"/>

    <EditText
            android:id="@+id/et_accessToken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_accessToken"
            android:inputType="textPersonName"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_separator"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"/>

    <TextView
            android:id="@+id/txt_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/btn_joinGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_joinGame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_separator"/>

    <Button
            android:id="@+id/btn_createGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_createGame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_joinGame"
            android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>